// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopBar /> should not render without motion indicator or camera view 1`] = `<div />`;

exports[`<TopBar /> should render Cameras Drop down with camera view 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

<div>
  <div
    class="c0"
    data-mocked="SpaceBetween"
    direction="horizontal"
  >
    <ul
      data-mocked="ButtonDropdown"
      data-testid="camera-views"
    >
      <li
        id="camera-uuid"
      >
        Camera
      </li>
    </ul>
  </div>
</div>
`;

exports[`<TopBar /> should render View Options Drop down with motion indicator 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

<div>
  <div
    class="c0"
    data-mocked="SpaceBetween"
    direction="horizontal"
  >
    <ul
      data-mocked="ButtonDropdown"
      data-testid="view-options"
    >
      <li
        id="MotionIndicator"
      >
        <svg
          fill="none"
          height="12"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m1.41 5 4.71 4.71 8.29-8.3"
            stroke="#545B64"
          />
        </svg>
        Motion indicator
      </li>
    </ul>
  </div>
</div>
`;

exports[`<TopBar /> should render both drop downs with motion indicator and camera view 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

<div>
  <div
    class="c0"
    data-mocked="SpaceBetween"
    direction="horizontal"
  >
    <ul
      data-mocked="ButtonDropdown"
      data-testid="view-options"
    >
      <li
        id="MotionIndicator"
      >
        <svg
          fill="none"
          height="12"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m1.41 5 4.71 4.71 8.29-8.3"
            stroke="#545B64"
          />
        </svg>
        Motion indicator
      </li>
    </ul>
    <ul
      data-mocked="ButtonDropdown"
      data-testid="camera-views"
    >
      <li
        id="camera-uuid"
      >
        Camera
      </li>
    </ul>
  </div>
</div>
`;

exports[`<TopBar /> should render with motion indicator off option 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

<div>
  <div
    class="c0"
    data-mocked="SpaceBetween"
    direction="horizontal"
  >
    <ul
      data-mocked="ButtonDropdown"
      data-testid="view-options"
    >
      <li
        id="MotionIndicator"
      >
        Motion indicator
      </li>
    </ul>
  </div>
</div>
`;
